# AI_Compute_Predictor-TenaciousLab

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
engine/: inference_engine.py  sample_inputs.json  utils_modelinfo.py
reports/: model_estimates.json  run_history.csv  summary.json
runs/test_cpu/: best_model.pt  exported_scripted.pt  model_config.json
tokens/: collector.py  dataset.py  tokenizer.py
tools/: export_model.py  generate_epoch_report.py  generate_training_report.py  model_estimator.py  preprocess_tokens.py  quantize_and_benchmark.py
training/: train_engine.py
